[gd_scene load_steps=6 format=3 uid="uid://cgrl70lsfotbm"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_f3t7l"]
[ext_resource type="PackedScene" uid="uid://bvycicjo0t63q" path="res://Scenes/ui.tscn" id="2_gi2r7"]
[ext_resource type="Texture2D" uid="uid://bo3ltxqced1qx" path="res://Assets/transparentPlaceholder.png" id="2_hsopl"]
[ext_resource type="AudioStream" uid="uid://5c84m14hpbnd" path="res://Assets/Audio/camera-click.wav" id="4_0abg3"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_cdsc0"]

[node name="Player" type="Node3D"]
script = ExtResource("1_f3t7l")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.913659, 0.406482, 0, -0.406482, 0.913659, 0, 0.469599, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
attributes = SubResource("CameraAttributesPractical_cdsc0")
far = 455.93

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(198, 136)
scale = Vector2(-308.902, 194.11)
texture = ExtResource("2_hsopl")

[node name="BlurTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="UI" parent="." instance=ExtResource("2_gi2r7")]

[node name="PhotoTimer" type="Timer" parent="."]

[node name="PigeonPhotoTimer" type="Timer" parent="."]

[node name="CrowPhotoTimer" type="Timer" parent="."]

[node name="BeePhotoTimer" type="Timer" parent="."]

[node name="SkunkPhotoTimer" type="Timer" parent="."]

[node name="CameraClick" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_0abg3")
volume_db = -25.07

[connection signal="pictureTaken" from="." to="UI" method="_on_player_picture_taken"]
